--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -10,7 +10,6 @@ html,
 body {
     font-family: $primary-font-stack;
     color: $text-color-primary;
-    overflow-x: hidden;
     scroll-behavior: smooth;
 }
 
